tests/cases/generics/errors/generic-aggregate-recursive-struct.ari
struct Node[T] {
  payload: T,
  child: Node[T],
}

fn main() -> i64 {
  return 0;
}
